--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,15 +6,18 @@ environment:
   app_name: Markdown
   output_path: builds/ipa
   product_name: Markdown
-  build_version: 0.1.1
+  build_version: 1.0.{build}
 
 install:
   - brew update
-  - brew install flet
+  - brew install python3
+  - brew install --cask flutter
+  - flutter doctor
+  - pip3 install flet
 
 build_script:
   - flet build ipa "$app_name" --output "$output_path" --product "$product_name" --build-version "$build_version"
 
 artifacts:
-  - path: builds/$app_name/ipa/**
+  - path: builds/ipa/**
     name: Markdown Build
