--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,11 +11,14 @@ environment:
 install:
   - brew update
   - brew install python3
+  - python3 -m venv venv
+  - source venv/bin/activate
+  - pip install flet
   - brew install --cask flutter
   - flutter doctor
-  - pip3 install flet
 
 build_script:
+  - source venv/bin/activate
   - flet build ipa "$app_name" --output "$output_path" --product "$product_name" --build-version "$build_version"
 
 artifacts:
