--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,5 +24,5 @@ build_script:
   - flet build ipa "$app_name" --output "$output_path" --product "$product_name" --build-version "$build_version"
 
 artifacts:
-  - path: $app_name/builds/ipa/**/*.ipa
+  - path: $app_name/builds/ipa/*.ipa
     name: $app_name Build
